--- a/java/study/blog/blog/src/main/resources/application.yml
+++ b/java/study/blog/blog/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
     database: mysql
     open-in-view: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
